--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
             <version>4.17.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.tommyettinger</groupId>
+            <artifactId>blazingchain</artifactId>
+            <version>1.4.4.4</version>
+        </dependency>
+
     </dependencies>
 
     <groupId>org.example</groupId>
